fixed z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ input[type="search"]:focus + .btn-search {
 
 .slider-controls{
   position: absolute;
-  z-index: 1000;
+  z-index: 45;
   bottom: 35px;
   left: 50%;
   width: 200px;
